# cinereserve

./: .gitignore  Dockerfile  README.md  backup_db.json  docker-compose.yml  manage.py  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_is_active_user_is_superuser.py  0003_rename_is_superuser_user_is_staff.py  0004_user_is_superuser.py
cinereserve/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/management/commands/: seed_movies.py
core/migrations/: 0001_initial.py  0002_room_session.py
pgadmin-data/: pgadmin4.db
pgadmin-data/sessions/: d65e7736-730d-4c4d-8e3b-8dac4983a943
